--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,8 @@ button:focus-visible {
 .film-card {
   padding: 10px 15px;
   border: 2px solid white;
-  width: 200px;
+  width: 300px;
+  height: 550px;
   background-color: black;
   color: white;
   display: flex;
@@ -81,6 +82,7 @@ button:focus-visible {
   flex-direction: column;
   gap: 10px;
   border-radius: 8px;
+  overflow: hidden;
 }
 
 .film-image {
@@ -169,4 +171,32 @@ button:focus-visible {
   height: 2px;
   width: 100%;
   background-color: white;
+}
+
+.film-detail {
+  background-color: #1c1c1c;
+  color: white;
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 900px;
+  margin: auto;
+  text-align: left;
+}
+
+.film-detail h1 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+}
+
+.film-detail-image {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+.film-detail p {
+  font-size: 1.1rem;
+  margin: 10px 0;
 }
